[package]
name = "twitter"
version = "0.1.0"
authors = ["Rodrigo Azevedo <rodrigo.aze7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bson = "0.13.0"
mongodb = "0.3.7"
chrono = "0.4.9"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
